# cPlusPlus

./: CMakeLists.txt
pracitce1/: main.cpp  minus.cpp  minus.h  pracitce1.cbp
practice/learncpp/basics1/HelloWorld/: HelloWorld.cpp  HelloWorld.sln  HelloWorld.vcxproj  Test.cpp  Test.h
practice/learncpp/basics1/HelloWorld/HelloWorld/: compilerStandardTest.cpp
practice/learncpp/basics1/HelloWorld/HelloWorld/Debug/: HelloWorld.exe.recipe  HelloWorld.ilk  vc143.idb
practice/learncpp/basics1/HelloWorld/HelloWorld/Debug/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
practice1/: Names.h  PrintStandard.cpp  add.cpp  add.h  cout.cpp  func1.cpp  func1.h  getInteger.cpp  main.cpp  practice1.depend
robotics/basics/: file1
