cmake_minimum_required(VERSION 3.29)
project(cPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(cPlusPlus
    pracitce1/main.cpp
        practice/learncpp/basics1/HelloWorld/HelloWorld.cpp
    practice1/main.cpp
    practice1/PrintStandard.cpp
        pracitce1/minus.cpp
        pracitce1/minus.h
        practice1/getInteger.cpp
        practice1/cout.cpp
)
