cmake_minimum_required(VERSION 3.29)
project(cPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(cPlusPlus
        practice/learncpp/basics1/HelloWorld/HelloWorld.cpp
    practice1/main.cpp
    practice1/PrintStandard.cpp
        practice1/getInteger.cpp
        practice1/cout.cpp
        practice/learncpp/basics1/HelloWorld/Test.cpp
        practice/learncpp/basics1/HelloWorld/Test.h
        practice1/add.cpp
        practice1/add.h
        practice1/Names.h
        practice1/func1.cpp
        practice1/func1.h
)
